checkout button on bookInfo + overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -178,10 +178,8 @@ button:active {
   display: flex;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
   transition: all 300ms ease;
-  opacity: 0;
-  transform: translate(100%);
+  display: none;
 }
 
 .menu--open {
@@ -190,9 +188,7 @@ button:active {
 }
 
 .menu--open .menu__backdrop {
-  visibility: visible;
-  opacity: 1;
-  transform: translate(0);
+  display: flex;
 }
 
 .menu__links {
@@ -302,7 +298,7 @@ HIGHLIGHTS
   background: url("./assets/wave.svg");
   content: "";
   position: absolute;
-  width: 101vw;
+  width: 100vw;
   height: 12vw;
   left: 0;
   z-index: 1;
